--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Professional CCTV camera installation services in Dubai. Secure your home & business with top-quality surveillance solutions.">
     <title>CCTV Camera Installation Dubai | Secure Your Property</title>
+    <meta name="google-site-verification" content="bV37bNhmSLCPuYacO9wq5ov-JE5ScI1pDTF-cN5zrIw" />
     <link rel="stylesheet" href="styles.css">
     <style>
         * {
