--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <main>
         <section>
             <h2>Why Choose Our CCTV Installation Services in Dubai?</h2>
-            <p>Our team specializes in high-quality <a href="https://posts.gle/coExNT">CCTV camera installation Dubai</a>, ensuring complete security for your home or business. With years of experience, we offer top-notch surveillance solutions to meet your needs.</p>
+            <p>Our team specializes in high-quality <a href="https://cctv-camera-installation-in-dubai.pages.dev/">CCTV camera installation Dubai</a>, ensuring complete security for your home or business. With years of experience, we offer top-notch surveillance solutions to meet your needs.</p>
         </section>
 
         <section>
